--- a/package.json
+++ b/package.json
@@ -55,5 +55,7 @@
     "traverse": "^0.6.6",
     "wiredep": "^2.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-static": "^0.7.8"
+  }
 }
